--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@melvingeorge/linkedin-post-share": "npm:@jsr/melvingeorge__linkedin-post-share@^0.1.0",
     "active-win": "^9.0.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "screenshot-desktop": "^1.15.1",
     "simple-git": "^3.27.0",
     "windows-active-process": "^1.1.1"
