--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "kitsuneposter",
   "module": "index.ts",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/screenshot-desktop": "^1.12.3"
+  "scripts": {
+    "start": "bun run index.ts",
+    "dev": "bun --watch run index.ts"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "type": "module",
   "dependencies": {
     "@melvingeorge/linkedin-post-share": "npm:@jsr/melvingeorge__linkedin-post-share@^0.1.0",
+    "@types/express": "^5.0.0",
     "active-win": "^9.0.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "screenshot-desktop": "^1.15.1",
     "simple-git": "^3.27.0",
+    "sqlite3": "^5.1.6",
     "windows-active-process": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/screenshot-desktop": "^1.12.3",
+    "@types/sqlite3": "^3.1.11"
   },
   "trustedDependencies": [
     "active-win",
+    "sqlite3",
     "windows-active-process"
   ]
 }
